--- a/server/pom.xml
+++ b/server/pom.xml
@@ -53,14 +53,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.kylin</groupId>
-            <artifactId>kylin-job</artifactId>
+            <artifactId>kylin-storage-hbase</artifactId>
             <version>${project.parent.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.hbase</groupId>
-                    <artifactId>hbase-common</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- Test & Env -->
@@ -77,13 +71,6 @@
             <type>test-jar</type>
             <scope>test</scope>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kylin</groupId>
-            <artifactId>kylin-job</artifactId>
-            <version>${project.parent.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
         </dependency>
         
         <!-- depends on kylin-jdbc just for running jdbc test cases in server module -->
