--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -16,7 +16,7 @@ kylin.job.mapreduce.default.reduce.input.mb=500
 
 # If true, job engine will not assume that hadoop CLI reside on the same server as it self
 # you will have to specify kylin.job.remote.cli.hostname, kylin.job.remote.cli.username and kylin.job.remote.cli.password
-kylin.job.run.as.remote.cmd=true
+kylin.job.run.as.remote.cmd=false
 
 # Only necessary when kylin.job.run.as.remote.cmd=true
 kylin.job.remote.cli.hostname=sandbox
@@ -34,7 +34,7 @@ kylin.job.remote.cli.working.dir=/tmp/kylin
 kylin.job.concurrent.max.limit=10
 
 # Whether calculate cube in mem in each mapper;
-kylin.job.cubing.inMem=false
+kylin.job.cubing.inMem=true
 
 #the percentage of the sampling, default 25%
 kylin.job.cubing.inMem.sampling.percent=25
