--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,11 @@
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <commons-collections4.version>4.0</commons-collections4.version>
         <commons-email.version>1.1</commons-email.version>
+        <commons-math3.version>3.5</commons-math3.version>
+        <!--
         <commons-math3.version>3.6-SNAPSHOT</commons-math3.version>
-
+        -->
+        
         <!-- Spark -->
         <spark.version>1.3.0</spark.version>
 
