--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -29,7 +29,8 @@
     "angular-cookies": "1.2",
     "angular-bootstrap-nav-tree": "*",
     "components-font-awesome": "~4.3.0",
-    "bootstrap-sweetalert": "~0.4.3"
+    "bootstrap-sweetalert": "~0.4.3",
+    "angular-toggle-switch":"1.3.0"
   },
   "devDependencies": {
     "less.js": "~1.4.0",
