KYLIN-1045 Fix exclude in pom.xml for RAT

--- a/pom.xml
+++ b/pom.xml
@@ -621,6 +621,7 @@
                                 <exclude>**/*.snapshot</exclude>
                                 <exclude>**/*.pdf</exclude>
                                 <exclude>**/*.log</exclude>
+                                <exclude>dist/**</exclude>
 
                                 <exclude>**/.checkstyle</exclude>
                                 <!--Job's Test Data-->
