--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,8 @@
         <xerces.version>2.9.1</xerces.version>
         <xalan.version>2.7.1</xalan.version>
         <compress-lzf.version>1.0.3</compress-lzf.version>
-        <extendedset.version>1.3.4</extendedset.version>
+        <!--<extendedset.version>1.3.4</extendedset.version>-->
+        <roaring.version>[0.5.4,)</roaring.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <opencsv.version>2.3</opencsv.version>
 
@@ -376,10 +377,15 @@
                 <version>${compress-lzf.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.roaringbitmap</groupId>
+                <artifactId>RoaringBitmap</artifactId>
+                <version>${roaring.version}</version>
+            </dependency>
+            <!--<dependency>
                 <groupId>com.n3twork.druid</groupId>
                 <artifactId>extendedset</artifactId>
                 <version>${extendedset.version}</version>
-            </dependency>
+            </dependency>-->
 
             <dependency>
                 <groupId>org.apache.curator</groupId>
