--- a/pom.xml
+++ b/pom.xml
@@ -622,6 +622,7 @@
                                 <exclude>**/*.pdf</exclude>
                                 <exclude>**/*.log</exclude>
                                 <exclude>dist/**</exclude>
+                                <exclude>server/logs**</exclude>
 
                                 <exclude>**/.checkstyle</exclude>
                                 <!--Job's Test Data-->
