KYLIN-742 Minor refactoring

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -73,6 +73,7 @@ kylin.hbase.region.count.min=1
 kylin.hbase.region.count.min=500
 
 ## Config for Restful APP ##
+
 # database connection settings:
 ldap.server=
 ldap.username=
@@ -87,6 +88,13 @@ acl.adminRole=
 acl.defaultRole=
 ganglia.group=
 ganglia.port=8664
+
+# route to hive settings
+kylin.route.hive.enabled=false
+# default to the embedded server (jdbc:hive2://)
+#kylin.route.hive.url=
+#kylin.route.hive.username=
+#kylin.route.hive.password=
 
 ## Config for mail service
 
@@ -131,12 +139,3 @@ kylin.monitor.ext.log.base.dir = /tmp/kylin_log1,/tmp/kylin_log2
 #will create external hive table to query result csv file
 #will set to kylin_query_log by default if not config here
 kylin.monitor.query.log.parse.result.table = kylin_query_log
-
-##### Config for enabling query rerouting to Hive. Disabled by default. ######
-kylin.route.hive.enabled=false
-
-# If query rerouting is enabled, provide the hive configurations
-# Default value for kylin.route.hive.url will be pointing to the embedded server (jdbc:hive2://)
-kylin.route.hive.url=
-kylin.route.hive.username=
-kylin.route.hive.password=
