KYLIN-457 Change to kylin-log4j.properties

--- a/common/src/main/resources/kylin-log4j.properties
+++ b/common/src/main/resources/kylin-log4j.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-# use this when conflict with hbase, enable this by -Dlog4j.configuration=kylinlog4j.properties
+# enable this by -Dlog4j.configuration=kylin-log4j.properties
 
 log4j.rootLogger=INFO,stdout
 
