--- a/common/src/main/resources/kylin-log4j.properties
+++ b/common/src/main/resources/kylin-log4j.properties
@@ -25,3 +25,4 @@ log4j.appender.stdout.layout.ConversionPattern=L4J [%d{yyyy-MM-dd HH:mm:ss,SSS}]
 
 #log4j.logger.org.apache.hadoop=ERROR
 log4j.logger.org.apache.kylin=DEBUG
+log4j.logger.org.springframework=WARN
