--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
 
-    <display-name>Kylin RESt Service</display-name>
+    <display-name>Kylin REST Service</display-name>
 
     <welcome-file-list>
         <welcome-file>/index.html</welcome-file>
@@ -18,7 +18,7 @@
 
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:log4j.properties</param-value>
+        <param-value>classpath:kylin-server-log4j.properties</param-value>
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -30,7 +30,7 @@
     </context-param>
 
     <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+        <listener-class>org.apache.kylin.rest.util.Log4jConfigListener</listener-class>
     </listener>
 
     <listener>
