--- a/core-job/pom.xml
+++ b/core-job/pom.xml
@@ -43,7 +43,7 @@
 
         <dependency>
             <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
+            <artifactId>curator-recipes</artifactId>
         </dependency>
 
         <!-- Env & Test -->
