--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -33,11 +33,11 @@ kylin.job.remote.cli.working.dir=/tmp/kylin
 # Max count of concurrent jobs running
 kylin.job.concurrent.max.limit=10
 
-# Whether calculate cube in mem in each mapper;
-kylin.job.cubing.inMem=true
+# Max reducer number
+kylin.job.mapreduce.max.reducer.number=5
 
-#the percentage of the sampling, default 25%
-kylin.job.cubing.inMem.sampling.percent=25
+#the percentage of the sampling, default 100%
+kylin.job.cubing.inMem.sampling.percent=100
 
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
