--- a/odbc/Driver/GODBC.RC
+++ b/odbc/Driver/GODBC.RC
@@ -99,15 +99,15 @@ LTEXT           "Server Host", IDC_STATIC, 49, 16, 38, 8
 LTEXT           "Port", IDC_STATIC, 69, 32, 14, 8
 EDITTEXT        IDC_SERVER, 92, 14, 110, 12, ES_AUTOHSCROLL
 EDITTEXT        IDC_PORT, 92, 31, 30, 12, ES_AUTOHSCROLL
+LTEXT           "(only https service permitted)", IDC_STATIC, 93, 45, 90, 8
 LTEXT           "Username", IDC_STATIC, 52, 60, 33, 8
 LTEXT           "Password", IDC_STATIC, 54, 79, 32, 8
 EDITTEXT        IDC_UID, 92, 59, 111, 12, ES_AUTOHSCROLL
 EDITTEXT        IDC_PWD, 92, 76, 111, 13, ES_PASSWORD | ES_AUTOHSCROLL
-DEFPUSHBUTTON   "Done", IDOK, 91, 138, 50, 14, WS_DISABLED
-LTEXT           "(only https service permitted)", IDC_STATIC, 93, 45, 90, 8
-COMBOBOX        IDC_COMBO1, 92, 117, 112, 30, CBS_DROPDOWN | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
 PUSHBUTTON      "Connect", IDC_CONNECT, 91, 95, 111, 14
 LTEXT           "Project", IDC_STATIC, 61, 119, 23, 8
+COMBOBOX        IDC_COMBO1, 92, 117, 112, 30, CBS_DROPDOWN | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+DEFPUSHBUTTON   "Done", IDOK, 91, 138, 50, 14, WS_DISABLED
 END
 
 IDD_DSN_CFG2 DIALOGEX 0, 0, 263, 204
@@ -116,21 +116,21 @@ CAPTION "Kylin DSN Configuration Dialog"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
 PUSHBUTTON      "Cancel", IDCANCEL, 145, 167, 50, 14
+LTEXT           "&DSN Name", IDC_STATIC, 49, 17, 37, 8
 LTEXT           "Server Host", IDC_STATIC, 48, 35, 38, 8
 LTEXT           "Port", IDC_STATIC, 72, 52, 14, 8
+EDITTEXT        IDC_DSNNAME, 93, 14, 102, 12, ES_AUTOHSCROLL
 EDITTEXT        IDC_SERVER, 93, 33, 102, 12, ES_AUTOHSCROLL
 EDITTEXT        IDC_PORT, 93, 50, 30, 12, ES_AUTOHSCROLL
+LTEXT           "(only https service permitted)", IDC_STATIC, 94, 66, 90, 8
 LTEXT           "Username", IDC_STATIC, 53, 82, 33, 8
 LTEXT           "Password", IDC_STATIC, 55, 102, 32, 8
 EDITTEXT        IDC_UID, 93, 79, 102, 12, ES_AUTOHSCROLL
 EDITTEXT        IDC_PWD, 93, 97, 102, 13, ES_PASSWORD | ES_AUTOHSCROLL
-DEFPUSHBUTTON   "Done", IDOK, 84, 167, 50, 14, WS_DISABLED
-LTEXT           "&DSN Name", IDC_STATIC, 49, 17, 37, 8
-EDITTEXT        IDC_DSNNAME, 93, 14, 102, 12, ES_AUTOHSCROLL
-LTEXT           "(only https service permitted)", IDC_STATIC, 94, 66, 90, 8
-PUSHBUTTON      "Test", IDC_BTEST, 94, 117, 102, 14
+PUSHBUTTON      "Connect", IDC_BTEST, 94, 117, 102, 14
 LTEXT           "Project", IDC_STATIC, 63, 145, 23, 8
 COMBOBOX        IDC_COMBO1, 94, 143, 101, 30, CBS_DROPDOWN | CBS_SORT | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+DEFPUSHBUTTON   "Done", IDOK, 84, 167, 50, 14, WS_DISABLED
 END
 
 
