--- a/server/src/main/resources/kylin-server-log4j.properties
+++ b/server/src/main/resources/kylin-server-log4j.properties
@@ -43,7 +43,7 @@ log4j.logger.org.springframework=WARN
 log4j.logger.org.apache.kylin.rest.controller.QueryController=DEBUG, query
 log4j.logger.org.apache.kylin.rest.service.QueryService=DEBUG, query
 log4j.logger.org.apache.kylin.query=DEBUG, query
-log4j.logger.org.apache.kylin.storage=DEBUG, query
+#log4j.logger.org.apache.kylin.storage=DEBUG, query //too many stuff in storage package now
 
 #job config
 log4j.logger.org.apache.kylin.rest.controller.JobController=DEBUG, job
