--- a/server/pom.xml
+++ b/server/pom.xml
@@ -56,7 +56,11 @@
             <artifactId>kylin-storage-hbase</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.kylin</groupId>
+            <artifactId>kylin-source-kafka</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
         <!-- Test & Env -->
         <dependency>
             <groupId>org.apache.kylin</groupId>
