KYLIN-1098 two "kylin.hbase.region.count.min" in conf/kylin.properties

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -70,7 +70,7 @@ kylin.hbase.region.cut.large=100
 
 # HBase min and max region count
 kylin.hbase.region.count.min=1
-kylin.hbase.region.count.min=500
+kylin.hbase.region.count.max=500
 
 ## Config for Restful APP ##
 
