--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 
         <!-- REST Service -->
         <spring.framework.version>3.1.2.RELEASE</spring.framework.version>
+        <spring.boot.version>1.2.7.RELEASE</spring.boot.version>
 
         <!-- Calcite Version -->
         <calcite.version>1.4.0-incubating</calcite.version>
@@ -544,12 +545,6 @@
                     <version>${maven-assembly.version}</version>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.15</version>
-                </plugin>
-
                 <!--
                 <plugin>
                     <groupId>com.mycila</groupId>
@@ -582,6 +577,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.15</version>
                     <executions>
                         <execution>
                             <id>validate</id>
