--- a/cube/pom.xml
+++ b/cube/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.apache.kylin</groupId>
         <artifactId>kylin</artifactId>
-        <version>1.1-incubating</version>
+        <version>1.1.1-incubating-SNAPSHOT</version>
     </parent>
 
     <dependencies>
