--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <commons-collections4.version>4.0</commons-collections4.version>
         <commons-email.version>1.1</commons-email.version>
         <commons-math3.version>3.5</commons-math3.version>
-        
+
         <!-- Spark -->
         <spark.version>1.3.0</spark.version>
 
@@ -857,6 +857,12 @@
                                 <exclude>webapp/app/css/AdminLTE-fonts.css</exclude>
                                 <exclude>webapp/app/css/AdminLTE.css</exclude>
 
+                                <!--configuration file -->
+                                <exclude>webapp/app/routes.json</exclude>
+                                <exclude>webapp/bower.json</exclude>
+                                <exclude>webapp/grunt.json</exclude>
+                                <exclude>webapp/package.json</exclude>
+                                
                                 <!-- jdbc log -->
                                 <exclude>jdbc/kylin_jdbc.log*</exclude>
                                 <!-- server log -->
@@ -865,7 +871,7 @@
                                 <!-- HBase MiniCluster Testing Data, for testing only -->
                                 <exclude>examples/test_case_data/minicluster/hbase-export.tar.gz</exclude>
                                 <exclude>examples/test_case_data/**/*.xml</exclude>
-                                
+
                                 <!--ODBC sub project is a VS project, exclude related files -->
                                 <exclude>**/*.sln</exclude>
                                 <exclude>**/*.vcxproj</exclude>
