KYLIN-1127 Broadcaster be configured by KylinConfig (instead of spring profile)

--- a/examples/test_case_data/localmeta/kylin.properties
+++ b/examples/test_case_data/localmeta/kylin.properties
@@ -1,7 +1,7 @@
 ## Config for Kylin Engine ##
 
 # List of web servers in use, this enables one web server instance to sync up with other servers.
-kylin.rest.servers=localhost:7070
+#kylin.rest.servers=localhost:7070
 
 # The metadata store in hbase
 kylin.metadata.url=
