--- a/examples/test_case_data/minicluster/kylin.properties
+++ b/examples/test_case_data/minicluster/kylin.properties
@@ -21,10 +21,10 @@
 kylin.rest.servers=ADMIN:KYLIN@localhost
 
 # The metadata store in hbase
-kylin.metadata.url=kylin_metadata@hbase:minicluster:/hbase-unsecure
+kylin.metadata.url=kylin_metadata@hbase
 
 # The storage for final cube file in hbase
-kylin.storage.url=hbase:minicluster:/hbase-unsecure
+kylin.storage.url=hbase
 
 # Temp folder in hdfs, make sure user has the right access to the hdfs directory
 kylin.hdfs.working.dir=/tmp
