KYLIN-976 Extract fillTuple() methods

--- a/core-metadata/pom.xml
+++ b/core-metadata/pom.xml
@@ -41,6 +41,12 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
+
         <!-- Env & Test -->
         <dependency>
             <groupId>org.apache.kylin</groupId>
