--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,6 @@
         <!-- Spark -->
         <spark.version>1.3.0</spark.version>
 
-
         <!-- Utility -->
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.6.4</slf4j.version>
@@ -89,6 +88,7 @@
         <extendedset.version>1.3.4</extendedset.version>
         <jetty.version>9.2.7.v20150116</jetty.version>
         <kryo.version>3.0.3</kryo.version>
+        <ehcache.version>2.8.1</ehcache.version>
 
         <!-- REST Service -->
         <spring.framework.version>3.1.2.RELEASE</spring.framework.version>
