--- a/server/pom.xml
+++ b/server/pom.xml
@@ -206,7 +206,7 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>2.8.1</version>
+            <version>${ehcache.version}</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
