--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,7 @@
     "author": "ApacheKylin",
     "repository": {
         "type:": "git",
-        "url": "https://github.com/apache/incubator-kylin.git"
+        "url": "https://github.com/apache/kylin.git"
     },
     "devDependencies": {
         "grunt": "~0.4.x",
